objects/Strategic_Analysis__c.object
<CustomObject>
    <fields>
        <fullName>Account_Name__c</fullName>
        <formula>Account__r.Name</formula>
        <label>Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Strategic_Analysis</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Action_Plan_1_Who_What_When__c</fullName>
        <label>Action Plan 1 Who, What, When</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Action_Plan_2_Who_What_When__c</fullName>
        <label>Action Plan 2 Who, What, When</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Action_Plan_3_Who_What_When__c</fullName>
        <label>Action Plan 3 Who, What, When</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Adequacy_of_Current_Position__c</fullName>
        <label>Adequacy of Current Position</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Secure</fullName>
                </value>
                <value>
                    <fullName>Comfort</fullName>
                </value>
                <value>
                    <fullName>OK</fullName>
                </value>
                <value>
                    <fullName>Concern</fullName>
                </value>
                <value>
                    <fullName>Discomfort</fullName>
                </value>
                <value>
                    <fullName>Worry</fullName>
                </value>
                <value>
                    <fullName>Fear</fullName>
                </value>
                <value>
                    <fullName>Panic</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Buying_Influence_1__c</fullName>
        <inlineHelpText>Name, Title, Location</inlineHelpText>
        <label>Buying Influence 1</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Buying_Influence_2__c</fullName>
        <inlineHelpText>Name, Title, Location</inlineHelpText>
        <label>Buying Influence 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Buying_Influence_3__c</fullName>
        <inlineHelpText>Name, Title, Location</inlineHelpText>
        <label>Buying Influence 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Close_Date__c</fullName>
        <inlineHelpText>What is the target date for closing the proposed product or service business</inlineHelpText>
        <label>Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Competition_Type__c</fullName>
        <label>Competition Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Buying from Someone Else</fullName>
                </value>
                <value>
                    <fullName>Using Budget for Something Else</fullName>
                </value>
                <value>
                    <fullName>Using Internal Resources</fullName>
                </value>
                <value>
                    <fullName>Doiing Nothing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Current_Volume__c</fullName>
        <label>Current Volume</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>$0 No Current Volume</fullName>
                </value>
                <value>
                    <fullName>$0-50K Annual</fullName>
                </value>
                <value>
                    <fullName>$50K to $100K Annual</fullName>
                </value>
                <value>
                    <fullName>$100K to $500K Annual</fullName>
                </value>
                <value>
                    <fullName>&gt;$500K Annual</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Development_Partnership__c</fullName>
        <label>Development Partnership</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>+5</fullName>
                </value>
                <value>
                    <fullName>+4</fullName>
                </value>
                <value>
                    <fullName>+3</fullName>
                </value>
                <value>
                    <fullName>+2</fullName>
                </value>
                <value>
                    <fullName>+1</fullName>
                </value>
                <value>
                    <fullName>-1</fullName>
                </value>
                <value>
                    <fullName>-2</fullName>
                </value>
                <value>
                    <fullName>-3</fullName>
                </value>
                <value>
                    <fullName>-4</fullName>
                </value>
                <value>
                    <fullName>-5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Evidence_to_support_Rating_Influence_1__c</fullName>
        <label>Evidence to support Rating Influence 1</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Evidence_to_support_Rating_Influence_2__c</fullName>
        <label>Evidence to support Rating Influence 2</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Evidence_to_support_Rating_Influence_3__c</fullName>
        <label>Evidence to support Rating Influence 3</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Highly_Technical__c</fullName>
        <label>Highly Technical</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>+5</fullName>
                </value>
                <value>
                    <fullName>+4</fullName>
                </value>
                <value>
                    <fullName>+3</fullName>
                </value>
                <value>
                    <fullName>+2</fullName>
                </value>
                <value>
                    <fullName>+1</fullName>
                </value>
                <value>
                    <fullName>-1</fullName>
                </value>
                <value>
                    <fullName>-2</fullName>
                </value>
                <value>
                    <fullName>-3</fullName>
                </value>
                <value>
                    <fullName>-4</fullName>
                </value>
                <value>
                    <fullName>-5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Influence_1_Key_Win_Results__c</fullName>
        <inlineHelpText>A short statement of the personal Win that this influence attains when important measurable business results are delivered.</inlineHelpText>
        <label>Influence 1 Key Win-Results</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Influence_2_Base_Covered__c</fullName>
        <inlineHelpText>Rate how well your base is covered with each Buying Influence for this sales objective.</inlineHelpText>
        <label>Base Covered Rating - IFL-2</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>-5</fullName>
                </value>
                <value>
                    <fullName>-4</fullName>
                </value>
                <value>
                    <fullName>-3</fullName>
                </value>
                <value>
                    <fullName>-2</fullName>
                </value>
                <value>
                    <fullName>-1</fullName>
                </value>
                <value>
                    <fullName>+1</fullName>
                </value>
                <value>
                    <fullName>+2</fullName>
                </value>
                <value>
                    <fullName>+3</fullName>
                </value>
                <value>
                    <fullName>+4</fullName>
                </value>
                <value>
                    <fullName>+5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Influence_2_Key_Win_Results__c</fullName>
        <inlineHelpText>A short statement of the personal Win that this influence attains when important measurable business results are delivered.</inlineHelpText>
        <label>Influence 2 Key Win-Results</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Influence_3_Key_Win_Results__c</fullName>
        <inlineHelpText>A short statement of the personal Win that this influence attains when important measurable business results are delivered.</inlineHelpText>
        <label>Influence 3 Key Win-Results</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Information_Needed_1__c</fullName>
        <inlineHelpText>What is need and from whom</inlineHelpText>
        <label>Information Needed 1</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Information_Needed_2__c</fullName>
        <inlineHelpText>What is needed and from whom</inlineHelpText>
        <label>Information Needed 2</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Information_Needed_3__c</fullName>
        <inlineHelpText>what is needed and from whom</inlineHelpText>
        <label>Information Needed 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loyal_to_Vendors__c</fullName>
        <label>Loyal to Vendors</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>+5</fullName>
                </value>
                <value>
                    <fullName>+4</fullName>
                </value>
                <value>
                    <fullName>+3</fullName>
                </value>
                <value>
                    <fullName>+2</fullName>
                </value>
                <value>
                    <fullName>+1</fullName>
                </value>
                <value>
                    <fullName>-1</fullName>
                </value>
                <value>
                    <fullName>-2</fullName>
                </value>
                <value>
                    <fullName>-3</fullName>
                </value>
                <value>
                    <fullName>-4</fullName>
                </value>
                <value>
                    <fullName>-5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Mode_Influnecer_1__c</fullName>
        <label>Mode Influnecer 1</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Growth</fullName>
                </value>
                <value>
                    <fullName>Trouble</fullName>
                </value>
                <value>
                    <fullName>Even Keel</fullName>
                </value>
                <value>
                    <fullName>Over Confident</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Mode_Influnecer_2__c</fullName>
        <label>Mode Influnecer 2</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Growth</fullName>
                </value>
                <value>
                    <fullName>Trouble</fullName>
                </value>
                <value>
                    <fullName>Even Keel</fullName>
                </value>
                <value>
                    <fullName>Over Confident</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Mode_Influnecer_3__c</fullName>
        <label>Mode Influnecer 3</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Growth</fullName>
                </value>
                <value>
                    <fullName>Trouble</fullName>
                </value>
                <value>
                    <fullName>Even Keel</fullName>
                </value>
                <value>
                    <fullName>Over Confident</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>My_Position_vs_Competition__c</fullName>
        <label>My Position vs. Competition</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Only Alternative</fullName>
                </value>
                <value>
                    <fullName>Front Runner</fullName>
                </value>
                <value>
                    <fullName>Shared</fullName>
                </value>
                <value>
                    <fullName>Zero</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Open_Transparent_Vendor_Communications__c</fullName>
        <label>Open Transparent Vendor Communications</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>+5</fullName>
                </value>
                <value>
                    <fullName>+4</fullName>
                </value>
                <value>
                    <fullName>+3</fullName>
                </value>
                <value>
                    <fullName>+2</fullName>
                </value>
                <value>
                    <fullName>+1</fullName>
                </value>
                <value>
                    <fullName>-1</fullName>
                </value>
                <value>
                    <fullName>-2</fullName>
                </value>
                <value>
                    <fullName>-3</fullName>
                </value>
                <value>
                    <fullName>-4</fullName>
                </value>
                <value>
                    <fullName>-5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipName>Strategic_Analysis</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Owner_Name__c</fullName>
        <formula>IF(ISBLANK(Owner:User.Full_Name__c), Owner:Queue.QueueName, Owner:User.Full_Name__c )</formula>
        <label>Owner Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Place_in_Sales_Funnel__c</fullName>
        <label>Place in Sales Funnel</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Universe</fullName>
                </value>
                <value>
                    <fullName>Above</fullName>
                </value>
                <value>
                    <fullName>In</fullName>
                </value>
                <value>
                    <fullName>Best Few</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Possible_Actions_1__c</fullName>
        <label>Possible Actions 1</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Possible_Actions_2__c</fullName>
        <label>Possible Actions 2</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Possible_Actions_3__c</fullName>
        <label>Possible Actions 3</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Possible_Actions_Red_Flags_1__c</fullName>
        <inlineHelpText>A good sales strategy leverages strengths and reduces or eliminates red flags</inlineHelpText>
        <label>Possible Actions - Red Flags 1</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Possible_Actions_Red_Flags_2__c</fullName>
        <inlineHelpText>A good sales strategy leverages strengths and reduces or eliminates red flags</inlineHelpText>
        <label>Possible Actions - Red Flags 2</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Possible_Actions_Red_Flags_3__c</fullName>
        <inlineHelpText>A good sales strategy leverages strengths and reduces or eliminates red flags</inlineHelpText>
        <label>Possible Actions - Red Flags 3</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Possible_Actions_Strengths_1__c</fullName>
        <inlineHelpText>A good sales strategy leverages strengths and reduces or eliminates red flags</inlineHelpText>
        <label>Possible Actions - Strengths 1</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Possible_Actions_Strengths_2__c</fullName>
        <inlineHelpText>A good sales strategy leverages strengths and reduces or eliminates red flags</inlineHelpText>
        <label>Possible Actions -Strengths 2</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Possible_Actions_Strengths_3__c</fullName>
        <inlineHelpText>A good sales strategy leverages strengths and reduces or eliminates red flags</inlineHelpText>
        <label>Possible Actions - Strengths 3</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Potential_Sales_Revenue__c</fullName>
        <inlineHelpText>What is the potential value for stated Product or Service</inlineHelpText>
        <label>Potential Sales Revenue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Product_Service__c</fullName>
        <inlineHelpText>What Imagine Product of Service best fits understood needs of this potential customer or opportunity</inlineHelpText>
        <label>Product/Service</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Rating_Influence_1__c</fullName>
        <label>Rating Influence 1</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>+5</fullName>
                </value>
                <value>
                    <fullName>+4</fullName>
                </value>
                <value>
                    <fullName>+3</fullName>
                </value>
                <value>
                    <fullName>+2</fullName>
                </value>
                <value>
                    <fullName>+1</fullName>
                </value>
                <value>
                    <fullName>-1</fullName>
                </value>
                <value>
                    <fullName>-2</fullName>
                </value>
                <value>
                    <fullName>-3</fullName>
                </value>
                <value>
                    <fullName>-4</fullName>
                </value>
                <value>
                    <fullName>-5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Rating_Influence_2__c</fullName>
        <label>Rating Influence 2</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>+5</fullName>
                </value>
                <value>
                    <fullName>+4</fullName>
                </value>
                <value>
                    <fullName>+3</fullName>
                </value>
                <value>
                    <fullName>+2</fullName>
                </value>
                <value>
                    <fullName>+1</fullName>
                </value>
                <value>
                    <fullName>-1</fullName>
                </value>
                <value>
                    <fullName>-2</fullName>
                </value>
                <value>
                    <fullName>-3</fullName>
                </value>
                <value>
                    <fullName>-4</fullName>
                </value>
                <value>
                    <fullName>-5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Rating_Influence_3__c</fullName>
        <label>Rating Influence 3</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>+5</fullName>
                </value>
                <value>
                    <fullName>+4</fullName>
                </value>
                <value>
                    <fullName>+3</fullName>
                </value>
                <value>
                    <fullName>+2</fullName>
                </value>
                <value>
                    <fullName>+1</fullName>
                </value>
                <value>
                    <fullName>-1</fullName>
                </value>
                <value>
                    <fullName>-2</fullName>
                </value>
                <value>
                    <fullName>-3</fullName>
                </value>
                <value>
                    <fullName>-4</fullName>
                </value>
                <value>
                    <fullName>-5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Red_Flag_1__c</fullName>
        <label>Red Flag 1</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Red_Flag_2__c</fullName>
        <label>Red Flag 2</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Red_Flag_3__c</fullName>
        <label>Red Flag 3</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Role_Influencer_1__c</fullName>
        <label>Role Influencer 1</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Economic</fullName>
                </value>
                <value>
                    <fullName>User</fullName>
                </value>
                <value>
                    <fullName>Technical</fullName>
                </value>
                <value>
                    <fullName>Coach</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Role_Influencer_2__c</fullName>
        <label>Role Influencer 2</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Economic</fullName>
                </value>
                <value>
                    <fullName>User</fullName>
                </value>
                <value>
                    <fullName>Technical</fullName>
                </value>
                <value>
                    <fullName>Coach</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Role_Influencer_3__c</fullName>
        <label>Role Influencer 3</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Economic</fullName>
                </value>
                <value>
                    <fullName>User</fullName>
                </value>
                <value>
                    <fullName>Technical</fullName>
                </value>
                <value>
                    <fullName>Coach</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Significant_Budget_for_Broadcast_Technol__c</fullName>
        <label>Significant Budget for Broadcast Technol</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>+5</fullName>
                </value>
                <value>
                    <fullName>+4</fullName>
                </value>
                <value>
                    <fullName>+3</fullName>
                </value>
                <value>
                    <fullName>+2</fullName>
                </value>
                <value>
                    <fullName>+1</fullName>
                </value>
                <value>
                    <fullName>-1</fullName>
                </value>
                <value>
                    <fullName>-2</fullName>
                </value>
                <value>
                    <fullName>-3</fullName>
                </value>
                <value>
                    <fullName>-4</fullName>
                </value>
                <value>
                    <fullName>-5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Specify_Compeitor_s__c</fullName>
        <label>Specify Compeitor(s)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Strength_1__c</fullName>
        <label>Strength 1</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Strength_2__c</fullName>
        <label>Strength 2</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Strength_3__c</fullName>
        <label>Strength 3</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Timing_for_Priorities__c</fullName>
        <label>Timing for Priorities</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Urgent</fullName>
                </value>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Worki it In</fullName>
                </value>
                <value>
                    <fullName>Later</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Total_Potential_Volume__c</fullName>
        <label>Total Potential Volume</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>$0-50K Annual</fullName>
                </value>
                <value>
                    <fullName>$50 to 100K Annual</fullName>
                </value>
                <value>
                    <fullName>$100K to $500K Annual</fullName>
                </value>
                <value>
                    <fullName>&gt;$500K Annual</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>influence_1_Base_Covered__c</fullName>
        <inlineHelpText>Rate how well your base is covered with each Buying Influence for this sales objective.</inlineHelpText>
        <label>Base Covered Rating - IFL-1</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>-5</fullName>
                </value>
                <value>
                    <fullName>-4</fullName>
                </value>
                <value>
                    <fullName>-3</fullName>
                </value>
                <value>
                    <fullName>-2</fullName>
                </value>
                <value>
                    <fullName>-1</fullName>
                </value>
                <value>
                    <fullName>+1</fullName>
                </value>
                <value>
                    <fullName>+2</fullName>
                </value>
                <value>
                    <fullName>+3</fullName>
                </value>
                <value>
                    <fullName>+4</fullName>
                </value>
                <value>
                    <fullName>+5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>influence_3_Base_Covered__c</fullName>
        <inlineHelpText>Rate how well your base is covered with each Buying Influence for this sales objective.</inlineHelpText>
        <label>Base Covered Rating - IFL-3</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>-5</fullName>
                </value>
                <value>
                    <fullName>-4</fullName>
                </value>
                <value>
                    <fullName>-3</fullName>
                </value>
                <value>
                    <fullName>-2</fullName>
                </value>
                <value>
                    <fullName>-1</fullName>
                </value>
                <value>
                    <fullName>+1</fullName>
                </value>
                <value>
                    <fullName>+2</fullName>
                </value>
                <value>
                    <fullName>+3</fullName>
                </value>
                <value>
                    <fullName>+4</fullName>
                </value>
                <value>
                    <fullName>+5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Strategic Analysis - Blue Sheet</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SA-{000000000}</displayFormat>
        <label>Strategic Analysis Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Strategic Analysis - Blue Sheets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>